deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-deployment
spec:
  selector:
    matchLabels:
      app: golang-backend
  template:
    metadata:
      labels:
        app: golang-backend
    spec:
      containers:
      - name: golang-app
        image: mendhak/http-https-echo:30
        ports:
        - containerPort: 8080
