service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: golang-backend
  ports:
  - port: 8080
    targetPort: 8080
