service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: nextjs-frontend
  ports:
  - port: 8080
    targetPort: 8080
