ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "127.0.0.1/32, 10.244.0.1, 192.168.49.0/24"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
  - host: redpanda.local
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: my-redpanda-console-console
              port:
                number: 8080
